--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@ Proin id leo nec nisi eleifend eleifend.
                 break;
               case "Escape":
                 e.preventDefault();
+                index = -1;
+                load();
                 hide();
                 break;
               case "Enter":
