--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ Proin id leo nec nisi eleifend eleifend.
 
         AC.element.addEventListener("keydown", keydownHandler, true);
         AC.element.addEventListener("click", hide, true);
+        AC.element.addEventListener("blur", hide, true);
         AC.onLoad = loadHandler;
       })();
 
