--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Proin id leo nec nisi eleifend eleifend.
           }
 
           show();
-          load();
+          render();
         }
 
         ac.element.addEventListener("keydown", keydownHandler, true);
