--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
 
 <textarea id="textarea" style="width: 512px; height: 512px;">
-
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 Sed ornare augue nibh, non dignissim felis viverra et.
 Integer ex lorem, lobortis at viverra sit amet, imperdiet ac erat.
@@ -18,9 +17,7 @@ Mauris placerat viverra ipsum quis sagittis.
 Cras laoreet neque tortor. Quisque in maximus eros. 
 Vivamus vehicula vestibulum est, in interdum turpis. 
 Aenean tempor nulla at sapien suscipit finibus. 
-Proin id leo nec nisi eleifend eleifend.
-
-</textarea>
+Proin id leo nec nisi eleifend eleifend.</textarea>
 
     <script src="test/textarea-caret-position.js"></script>
     <script src="dist/mtga.js"></script>
@@ -101,8 +98,6 @@ Proin id leo nec nisi eleifend eleifend.
           // console.log("parser", el);
           const r = origParser(el);
           r.body = r.body.toLowerCase().replace(/\s/g, "_");
-
-          console.log(r);
 
           hide(false);
 
