--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
       const MAX_ITEM_COUNT = 100;
       const VISIBLE_COUNT = 11;
 
-      console.log("MTGA", window.MtgaJs);
+      console.log("window.MtgaJs", window.MtgaJs);
 
       const {
         MTGA,
@@ -38,8 +38,12 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
       } = window.MtgaJs;
 
       const mtga = new MTGA(document.getElementById("textarea"));
-      console.log("init", mtga);
+      console.log("MTGA", mtga);
 
+      const ac = mtga.getModule(AutoCompleteModule.name);
+      console.log("AutoCompleteModule", ac);
+
+      // set tags for AutoComplete
       const tags = [];
       for (let i = 0; i < 100000; i++) {
         tags.push(
@@ -55,11 +59,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           { key: "emma_martinez", value: "Emma Martinez" },      
         );
       }
-
-      const ac = mtga.getModule(AutoCompleteModule.name);
       ac.tags = tags;
-
-      console.log("AutoCompleteModule", ac);
 
       // indexing
       console.time("indexing");
@@ -81,6 +81,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
       console.timeEnd("indexing");
       console.log("indexes:", ac.indexes);
 
+      // Render auto-complete items
       ;(() => {
         const listEl = document.createElement("div");
         listEl.style.position = "absolute";
@@ -94,7 +95,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
             index = -1;
 
         const origParser = ac.parser;
-        ac.parser = (el) => {
+        ac.parser = function (el) {
           // console.log("parser", el);
           const r = origParser(el);
           r.body = r.body.toLowerCase().replace(/\s/g, "_");
@@ -102,21 +103,21 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           hide(false);
 
           if (r.body.length < 1 || r.body.length > 16) {
-            hide();
+            this.stop(true);
             return r;
           }
 
           return r;
         }
 
-        ac.filter = (req, i, candidates, result) => {
-          // console.log("filter", res);
-          const { tag, query } = req;
+        ac.filter = function (chunk, result, i, candidates) {
+          // console.log("filter", chunk);
+          const { tag, query } = chunk;
           const a = query.body;
           const b = tag.key;
 
           if (result.length >= MAX_ITEM_COUNT) {
-            ac.stop(true);
+            this.stop(true);
             return false;
           }
 
@@ -207,6 +208,7 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
               case "ArrowRight":
                 hide();
                 break;
+              case "Tab":
               case "Escape":
                 e.preventDefault();
                 hide();
@@ -251,8 +253,13 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
             itemEl.innerHTML = html;
             itemEl.addEventListener("mousedown", (e) => {
               e.preventDefault();
-              index = idx;
-              render();
+              if (index !== idx) {
+                index = idx;
+                render();
+              } else {
+                load();
+                hide();
+              }
             });
 
             items.push({
@@ -270,12 +277,11 @@ Proin id leo nec nisi eleifend eleifend.</textarea>
           render();
         }
 
-        mtga.element.addEventListener("keydown", keydownHandler, true);
+        mtga.element.addEventListener("keydown", keydownHandler);
         mtga.element.addEventListener("click", hide);
         mtga.element.addEventListener("blur", hide);
-        mtga.getModule(AutoCompleteModule.name).onData = onData;
+        ac.onData = onData;
       })();
-
     </script>
   </body>
 </html>
